# SteelVoiceMix

./: .gitignore  50-nova-pro-wireless.rules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dev.ibrahimaldhaheri.nova-mixer.metainfo.xml  dev.ibrahimaldhaheri.steelvoicemix.metainfo.xml  install.sh  noise-suppression-for-voice.spec  nova-mixer-gui.py  nova-mixer-gui.service  nova-mixer.desktop  nova-mixer.py  nova-mixer.service  nova-mixer.spec  nova_mixer_core.py  steelvoicemix-cli.py  steelvoicemix-dev.spec  steelvoicemix-gui.py  steelvoicemix-gui.service  steelvoicemix.desktop  steelvoicemix.service  steelvoicemix.spec  uninstall.sh
.copr/: Makefile
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  copr-dev.yml  copr-release.yml  dependabot-auto-merge.yml  dev-release.yml  refresh-asm-presets.yml
devices/: README.md  nova_pro_wireless.protocol.md  nova_pro_wireless.yaml
docs/: ALPHA_CHANNEL.md
flatpak/: README.md  dev.ibrahimaldhaheri.steelvoicemix.yml
ggoled_lib/: Cargo.toml
ggoled_lib/src/: lib.rs
gui/: __init__.py  about.py  app.py  asm_import.py  daemon_client.py  eq_graph_widget.py  eq_presets.py  eq_test_audio.py  game_eq.py  hrir_default.py  i18n.py  main_window.py  overlay.py  searchable_select.py  settings.py  sink_cycle.py  theme.py  update_checker.py  voice_test.py  widgets.py
gui/presets/: runtime_aliases.json
gui/presets/asm/chat/: Balanced.json  Broadcast.json  Clarity.json  Custom.json  Deep voice.json  Flat.json  Less Nasal.json  Podcast.json  Walkie Talkie.json
gui/presets/asm/game/: AION.json  (+391 more)
gui/tabs/: __init__.py  deck.py  equalizer.py  home.py  microphone.py  settings.py  sinks.py  surround.py
gui/translations/: README.md  steelvoicemix_ar.ts
scripts/: bump-dev-version.sh  fetch_asm_presets.py  seed_alias_stubs.py  setup_copr_dev_package.sh
src/: audio.rs  config.rs  display.rs  filter_chain.rs  hid.rs  hotplug.rs  main.rs  mic_chain.rs  mixer.rs  protocol.rs  routing.rs  surround_chain.rs
(+14 files in other folders)
