[package]
name = "nova-mixer"
version = "0.2.0"
edition = "2021"
description = "ChatMix for SteelSeries Arctis Nova Pro Wireless on Linux"
license = "MIT"

[[bin]]
name = "nova-mixer"
path = "src/main.rs"

[dependencies]
hidapi = { version = "2.6", default-features = false, features = ["linux-native-basic-udev"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
signal-hook = "0.3"
ctrlc = "3.4"
libc = "0.2"
