[package]
name = "steelvoicemix"
version = "0.4.2-beta.41"
edition = "2021"
description = "ChatMix for SteelSeries Arctis Nova Pro Wireless on Linux"
license = "GPL-3.0-only"

[[bin]]
name = "steelvoicemix"
path = "src/main.rs"

[dependencies]
hidapi = { version = "2.6", default-features = false, features = ["linux-native-basic-udev"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
libc = "0.2"
thiserror = "2"
# rusb provides libusb's hotplug callback API. We use it only for
# USB add/remove events (VID 0x1038 + PID 0x12E0); hidapi still owns
# the actual HID I/O. The watcher gives instant post-suspend reconnect
# instead of waiting for the battery-poll watchdog to fire.
rusb = "0.9"

[dependencies.ggoled_lib]
path = "ggoled_lib"
package = "ggoled_lib"
